--- a/MyPad/Views/Regions/MaintenanceContentView.xaml
+++ b/MyPad/Views/Regions/MaintenanceContentView.xaml
@@ -28,7 +28,7 @@
         </i:PropertyChangedTrigger>
     </i:Interaction.Triggers>
 
-    <Grid Margin="20 0 20 20">
+    <Grid Margin="20 0 20 20" MaxWidth="{StaticResource Const.MaxPageWidth}">
         <TabControl Padding="5 10 0 0" m:HeaderedControlHelper.HeaderFontWeight="Bold">
             <TabControl.Resources>
                 <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Common.DataGrid}">
