--- a/MyPad/Views/Regions/ShortcutKeysContentView.xaml
+++ b/MyPad/Views/Regions/ShortcutKeysContentView.xaml
@@ -16,15 +16,15 @@
              p:ViewModelLocator.AutoWireViewModel="True"
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid Margin="20 0 20 20">
-        <Grid.Resources>
-            <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Common.DataGrid}">
-                <Setter Property="AutoGenerateColumns" Value="False"/>
-                <Setter Property="HeadersVisibility" Value="None"/>
-                <Setter Property="ColumnWidth" Value="*"/>
-            </Style>
-        </Grid.Resources>
+    <Grid Margin="20 0 20 20" MaxWidth="{StaticResource Const.MaxPageWidth}">
         <DataGrid ItemsSource="{x:Static views:Commands.Definitions}">
+            <DataGrid.Style>
+                <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource Common.DataGrid}">
+                    <Setter Property="AutoGenerateColumns" Value="False"/>
+                    <Setter Property="HeadersVisibility" Value="None"/>
+                    <Setter Property="ColumnWidth" Value="*"/>
+                </Style>
+            </DataGrid.Style>
             <DataGrid.Resources>
                 <Style x:Key="TemplateColumnDataGridCell" TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource Common.DataGridCell}">
                     <Setter Property="IsTabStop" Value="False"/>
