--- a/MyPad/Views/Styles/Base/Sizes.xaml
+++ b/MyPad/Views/Styles/Base/Sizes.xaml
@@ -2,6 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:s="clr-namespace:System;assembly=System.Runtime">
 
+    <!-- 定数 -->
+    <s:Double x:Key="Const.MaxPageWidth">1200</s:Double>
+
+    <!-- 変数 -->
     <s:Double x:Key="Common.Size.Icon">16</s:Double>
     <s:Double x:Key="Common.Size.Tile">100</s:Double>
     <s:Double x:Key="Common.Size.TileIcon">24</s:Double>
