--- a/MyPad/Views/Dialogs/NotifyDialog.xaml
+++ b/MyPad/Views/Dialogs/NotifyDialog.xaml
@@ -14,10 +14,7 @@
              p:ViewModelLocator.AutoWireViewModel="True">
 
     <p:Dialog.WindowStyle>
-        <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource App.Dialog}">
-            <Setter Property="BorderBrush" Value="{DynamicResource PurpleColorBrush}"/>
-            <Setter Property="GlowBrush" Value="{DynamicResource PurpleColorBrush}"/>
-        </Style>
+        <Style TargetType="{x:Type m:MetroWindow}" BasedOn="{StaticResource App.Dialog}"/>
     </p:Dialog.WindowStyle>
 
     <Grid Margin="20 10 20 15" ge:GridEx.RowDefinition="*, 10, Auto">
