--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -227,7 +227,7 @@
                                 <ColumnDefinition Width="{StaticResource SideContentColumnWidth}"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Border ToolTip="{Binding Label, Mode=OneWay}" Background="{qc:MultiBinding '$P0 == $P1 ? new SolidColorBrush(Color.FromArgb((byte)204, (byte)0, (byte)120, (byte)215)) : Brushes.Transparent', P0={Binding Mode=OneWay}, P1={Binding Content, ElementName=SideContent, Mode=OneWay}}">
+                            <Border ToolTip="{Binding Label, Mode=OneWay}" Background="{qc:MultiBinding '$P0 == $P1 ? new SolidColorBrush(ThemeManager.Current.DetectTheme().PrimaryAccentColor) : Brushes.Transparent', P0={Binding Mode=OneWay}, P1={Binding Content, ElementName=SideContent, Mode=OneWay}}">
                                 <ContentControl Content="{Binding Icon, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" IsTabStop="False" Focusable="False"/>
                             </Border>
                         </Grid>
@@ -374,14 +374,14 @@
                                     <Condition Binding="{Binding IsReadOnly, Mode=OneWay}" Value="True"/>
                                     <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}, Mode=OneWay}" Value="True"/>
                                 </MultiDataTrigger.Conditions>
-                                <Setter Property="Background" Value="{DynamicResource OrangeColorBrush}"/>
+                                <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Disabled}"/>
                             </MultiDataTrigger>
                             <MultiDataTrigger>
                                 <MultiDataTrigger.Conditions>
                                     <Condition Binding="{Binding IsReadOnly, Mode=OneWay}" Value="True"/>
                                     <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}, Mode=OneWay}" Value="True"/>
                                 </MultiDataTrigger.Conditions>
-                                <Setter Property="Background" Value="{DynamicResource RedColorBrush}"/>
+                                <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Disabled}"/>
                             </MultiDataTrigger>
                         </Style.Triggers>
                     </Style>
