--- a/MyPad/Views/Regions/StatusBarView.xaml
+++ b/MyPad/Views/Regions/StatusBarView.xaml
@@ -27,14 +27,14 @@
                     <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                     <Setter Property="Background" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                     <Setter Property="FontFamily" Value="{DynamicResource {x:Static SystemFonts.StatusFontFamilyKey}}"/>
-                    <Setter Property="FontStyle" Value="{DynamicResource {x:Static SystemFonts.StatusFontStyleKey}}"/>
+                    <Setter Property="FontStyle"  Value="{DynamicResource {x:Static SystemFonts.StatusFontStyleKey}}"/>
                     <Setter Property="FontWeight" Value="{DynamicResource {x:Static SystemFonts.StatusFontWeightKey}}"/>
                     <Setter Property="BorderThickness" Value="0"/>
                     <Style.Resources>
-                        <!-- HACK: ボタンが押された状態の背景色を上書きする -->
-                        <SolidColorBrush x:Key="MahApps.Brushes.Gray7" Color="{StaticResource DarkBlueColorKey}"/>
-                        <!-- HACK: マウスオーバー時の背景色を上書きする -->
-                        <SolidColorBrush x:Key="MahApps.Brushes.Gray8" Color="{StaticResource DarkBlueColorKey}"/>
+                        <!-- ボタンが押された状態の背景色を上書きする -->
+                        <SolidColorBrush x:Key="MahApps.Brushes.Gray7" Color="{DynamicResource MahApps.Colors.Highlight}"/>
+                        <!-- マウスオーバー時の背景色を上書きする -->
+                        <SolidColorBrush x:Key="MahApps.Brushes.Gray8" Color="{DynamicResource MahApps.Colors.Highlight}"/>
                     </Style.Resources>
                 </Style>
                 <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource Common.ToggleButton}">
@@ -43,19 +43,19 @@
                     <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                     <Setter Property="Background" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                     <Setter Property="FontFamily" Value="{DynamicResource {x:Static SystemFonts.StatusFontFamilyKey}}"/>
-                    <Setter Property="FontStyle" Value="{DynamicResource {x:Static SystemFonts.StatusFontStyleKey}}"/>
+                    <Setter Property="FontStyle"  Value="{DynamicResource {x:Static SystemFonts.StatusFontStyleKey}}"/>
                     <Setter Property="FontWeight" Value="{DynamicResource {x:Static SystemFonts.StatusFontWeightKey}}"/>
                     <Setter Property="BorderThickness" Value="0"/>
-                    <Setter Property="m:ControlsHelper.MouseOverBorderBrush" Value="{StaticResource DarkBlueColorBrush}"/>
+                    <Setter Property="m:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource MahApps.Brushes.Highlight}"/>
                     <Style.Triggers>
-                        <!-- マウスオーバー時の背景色を上書きする -->
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{StaticResource DarkBlueColorBrush}"/>
-                        </Trigger>
                         <!-- チェック状態時の背景色を上書きする -->
                         <Trigger Property="IsChecked" Value="True">
                             <Setter Property="Background" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
                             <Setter Property="BorderBrush" Value="{Binding Background, RelativeSource={RelativeSource AncestorType={x:Type StatusBar}}, Mode=OneWay}"/>
+                        </Trigger>
+                        <!-- マウスオーバー時の背景色を上書きする -->
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Highlight}"/>
                         </Trigger>
                         <!-- チェック状態かつマウスオーバー時の背景色を上書きする -->
                         <MultiTrigger>
@@ -63,7 +63,7 @@
                                 <Condition Property="IsMouseOver" Value="True"/>
                                 <Condition Property="IsChecked" Value="True"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" Value="{StaticResource DarkBlueColorBrush}"/>
+                            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Highlight}"/>
                         </MultiTrigger>
                     </Style.Triggers>
                 </Style>
@@ -71,7 +71,7 @@
         </Style>
 
         <Style TargetType="{x:Type StatusBar}" BasedOn="{StaticResource Common.StatusBar}">
-            <Setter Property="Background" Value="{DynamicResource CyanColorBrush}"/>
+            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.AccentBase}"/>
             <Style.Triggers>
                 <!-- WindowTitleBrush に追従する処理を打ち消す -->
                 <MultiDataTrigger>
@@ -79,22 +79,14 @@
                         <Condition Binding="{Binding IsVisible, RelativeSource={RelativeSource Self}, Mode=OneWay}" Value="True"/>
                         <Condition Binding="{Binding IsActive, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Mode=OneWay}" Value="True"/>
                     </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="{DynamicResource CyanColorBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.AccentBase}"/>
                 </MultiDataTrigger>
                 <MultiDataTrigger>
                     <MultiDataTrigger.Conditions>
                         <Condition Binding="{Binding IsVisible, RelativeSource={RelativeSource Self}, Mode=OneWay}" Value="True"/>
                         <Condition Binding="{Binding IsActive, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Mode=OneWay}" Value="False"/>
                     </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="{DynamicResource CyanColorBrush}"/>
-                </MultiDataTrigger>
-                <!-- ポモドーロのセットに合わせて色を変更する -->
-                <MultiDataTrigger>
-                    <MultiDataTrigger.Conditions>
-                        <Condition Binding="{Binding SharedProperties.IsInPomodoro.Value, Mode=OneWay}" Value="True"/>
-                        <Condition Binding="{Binding SharedProperties.IsPomodoroWorking.Value, Mode=OneWay}" Value="True"/>
-                    </MultiDataTrigger.Conditions>
-                    <Setter Property="Background" Value="{DynamicResource PurpleColorBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.AccentBase}"/>
                 </MultiDataTrigger>
             </Style.Triggers>
         </Style>
